--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- meta charset -->
         <meta charset="utf-8">
         <!-- site title -->
-        <title>K4DM | Porifolio</title>
+        <title>K4DM | Portfolio</title>
         <!-- meta description -->
         <meta name="description" content="">
         <!-- mobile viwport meta -->
