--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
         <!-- meta charset -->
         <meta charset="utf-8">
         <!-- site title -->
-        <title>K4DM | Porifolio</title>
+        <title>K4DM | Hello World !</title>
         <!-- meta description -->
         <meta name="description" content="">
         <!-- mobile viwport meta -->
@@ -26,13 +26,13 @@
 
     <body class="dark">
 
-        <div class="preloader">
+        <!-- <div class="preloader">
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
-        </div>
+        </div> -->
 
         <div class="preview-wrapper">
             <!-- <div class="switcher-head">
