--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
 
     <body class="dark">
 
-        <div class="preloader">
+        <!-- <div class="preloader">
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
-        </div>
+        </div> -->
 
         <!-- <div class="preview-wrapper">
             <div class="switcher-head">
