--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- meta charset -->
         <meta charset="utf-8">
         <!-- site title -->
-        <title>K4DM | Portfolio</title>
+        <title>K4DM | Hello World !</title>
         <!-- meta description -->
         <meta name="description" content="">
         <!-- mobile viwport meta -->
@@ -27,11 +27,7 @@
     <body class="dark">
 
         <div class="preloader">
-            <div class="loading-mask"></div>
-            <div class="loading-mask"></div>
-            <div class="loading-mask"></div>
-            <div class="loading-mask"></div>
-            <div class="loading-mask"></div>
+            <div class="loading-mask"></div>  
         </div>
 
 
