--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="about.html" class="hex-content">
+                                        <a href="ComingSoon.html" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-profile-male"></i>
@@ -117,7 +117,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="services.html" class="hex-content">
+                                        <a href="ComingSoon.html" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-tools-2"></i>
@@ -138,7 +138,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="resume.html" class="hex-content">
+                                        <a href="ComingSoon.html" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-tools"></i>
@@ -159,7 +159,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="works.html" class="hex-content">
+                                        <a href="ComingSoon.html" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-briefcase2"></i>
@@ -193,7 +193,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="contact.html" class="hex-content">
+                                        <a href="ComingSoon.html"hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-envelope2"></i>
