--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="ComingSoon.html" class="hex-content">
+                                        <a href="NepaliPatro.html" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-briefcase2"></i>
