Made Changes to index page for change color

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!-- This allows front end users to change the color theme -->
         
-        <!-- <div class="preview-wrapper">
+        <div class="preview-wrapper">
             <div class="switcher-head">
                 <span>Style Switcher</span>
                 <div class="switcher-trigger tf-tools"></div>
@@ -51,7 +51,7 @@
                     <li class="c3" data-color="yellow" title="Default">Default</li>
                 </ul>
             </div>
-        </div> -->
+        </div>
 
         <main class="site-wrapper">
             <div class="pt-table">
