--- a/NepaliPatro.html
+++ b/NepaliPatro.html
@@ -81,8 +81,8 @@
 
                            <!-- Calender Widget -->
                            <div style="text-align: center;">          
-                                <iframe src="https://www.hamropatro.com/widgets/calender-full.php" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"
-                                style="border:none; overflow:hidden; width:800px; height:840px;" allowtransparency="true"></iframe>  
+                            <iframe src="https://www.hamropatro.com/widgets/calender-full.php" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" 
+                            style="border:none; overflow:hidden; max-width:100%; height:840px;" allowtransparency="true"></iframe>
                            </div>
 
                             <!-- Calender Widget -->
