--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="NepaliPatro.html" class="hex-content">
+                                        <a href="https://github.com/K4fledmanish" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-briefcase2"></i>
                                                 </span>
-                                                <span class="title">Works</span>
+                                                <span class="title">GitHub</span>
                                             </span>
                                             <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
