--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                                 <div class="page-title home text-center">
                                     <img style="max-width: 200px;" src="img/logo.png" alt="">
                                     <h2 style="text-align: center; color: #C1C1C1; ">Manish Kafle</h2>
+                                    <b style="text-align: center; color: #C1C1C1; ">Enthusiast Software / Web Develper</b>
                                 </div>
 
                                 <div class="hexagon-menu clear">
@@ -120,7 +121,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="ComingSoon.html" class="hex-content">
+                                        <a href="" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-tools-2"></i>
@@ -162,7 +163,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="https://github.com/K4fledmanish" class="hex-content">
+                                        <a href="https://github.com/K4fledmanish" class="hex-content" target="_blank">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-briefcase2"></i>
