Minor canges on pages

--- a/welcome.html
+++ b/welcome.html
@@ -70,8 +70,8 @@
                             <div class="col-xs-12 col-md-6 col-lg-7">
                                 <div class="page-title">
                                     <h2>Manish <span class="primary">Kafle</span> <span class="title-bg">About</span></h2>
-                                    <p>A product designer from Melbourne, Australia, who focuses on interactive design & A freelance designer focusing on typography & clean interfaces. Also works in Google..</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores repellendus corporis, tenetur inventore perferendis reprehenderit autem dignissimos non quos unde eveniet sapiente necessitatibus consequuntur ea ab dolore, minus nam eaque.</p>
+                                    <p>A Conscientious person who aims to contribute to the Society, based in Melbourne, Australia</p>
+                                    <p>My goal is to develop high-quality Websites and applications while creating an engaging user experience and utilising innovative design techniques. My skills in programming languages such as Html, CSS, JavaScript, Bootstrap, WordPress, Shopify, Java, ReactNative, Objective C, C++, Dart and Flutter combined with my knowledge of user experience design, allow me to create highly functional and visually appealing web and mobile applications. Additionally, I have considerable experience in agile development, debugging, and troubleshooting software.</p>
                                 </div>
                             </div>
                         </div> <!-- /.row -->
