--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <div class="page-title home text-center">
                                     <img style="max-width: 200px;" src="img/logo.png" alt="">
                                     <h2 style="text-align: center; color: #C1C1C1; ">Manish Kafle</h2>
-                                    <b style="text-align: center; color: #C1C1C1; ">Enthusiast Software / Web Develper</b>
+                                    <h5 style="text-align: center; color: #C1C1C1; ">Enthusiast Software / Web Develper</h5>
                                 </div>
 
                                 <div class="hexagon-menu clear">
@@ -79,7 +79,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="welcome.html" class="hex-content">
+                                        <a href="" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-dial"></i>
@@ -100,7 +100,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="ComingSoon.html" class="hex-content">
+                                        <a href="welcome.html" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-profile-male"></i>
