--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
             <div class="loading-mask"></div>
         </div> -->
 
-        <div class="preview-wrapper">
+        <!-- <div class="preview-wrapper">
             <div class="switcher-head">
                 <span>Style Switcher</span>
                 <div class="switcher-trigger tf-tools"></div>
@@ -52,7 +52,7 @@
                     <li class="c3" data-color="color-3" title="Blue">Blue</li>
                 </ul>
             </div>
-        </div>
+        </div> -->
 
         <main class="site-wrapper">
             <div class="pt-table">
@@ -65,7 +65,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
-                                    <h2>My <span class="primary">history</span> <span class="title-bg">Resume</span></h2>
+                                    <h2>My <span class="primary">Resume</span> <span class="title-bg">Resume</span></h2>
                                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                                 </div>
                             </div>
@@ -85,8 +85,10 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
+                                                <h5>Bachelor of Information Technology</h5>
+                                                <span>Academy of Information Technology</span></br>
+                                                <span>Melbourne, Australia</span></br>
+                                                <span>2018 - 2021</span>
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
@@ -96,45 +98,28 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                                <p>Claritas est etiam processus dynamicus, qui <br> sequitur mutationem consuetudium lectorum.</p>
+                                                <h5>Certificate IV in Work Health and Safety</h5>
+                                                <span>Rhodes College</span></br>
+                                                <span>Melbourne, Australia</span></br>
+                                                <span>2021 - 2022</span>
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
+
                                         <div class="history-item">
                                             <div class="history-icon">
                                                 <span class="history-hex"></span>
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
+                                                <h5>Level 4 Diploma in Computing</h5>
+                                                <span>NCC Education</span></br>
+                                                <span>London, United Kingdom</span></br>
+                                                <span>2016 - 2017</span>
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
+                                   
                                     </div>
                                 </div> <!-- /.history-block -->
                             </div> <!-- /.col -->
