--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="ComingSoon.html" class="hex-content">
+                                        <a href="resume.html" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-tools"></i>
