Fixed Bugs which threw Errors while Compiling

--- a/contact.html
+++ b/contact.html
@@ -25,19 +25,19 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/dark.css">
-        <link id="color-changer" rel="stylesheet" href="css/colors/color-0.css">
+        <link id="color-changer" rel="stylesheet" href="css/colors/blue.css">
     </head>
 
     <body class="dark">
 
-        <!-- <div class="preloader">
+        <div class="preloader">
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
             <div class="loading-mask"></div>
-        </div> -->
-
+        </div>
+<!-- 
         <div class="preview-wrapper">
             <div class="switcher-head">
                 <span>Style Switcher</span>
@@ -53,7 +53,7 @@
                     <li class="c3" data-color="color-3" title="Blue">Blue</li>
                 </ul>
             </div>
-        </div>
+        </div> -->
 
         <main class="site-wrapper">
             <div class="pt-table">
