--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a href="ComingSoon.html" class="hex-content">
+                                        <a href="contact.html" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-envelope2"></i>
