Added High School Education

--- a/resume.html
+++ b/resume.html
@@ -118,6 +118,20 @@
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
+
+                                         <div class="history-item">
+                                            <div class="history-icon">
+                                                <span class="history-hex"></span>
+                                                <i class="tf-documents5"></i>
+                                            </div>
+                                            <div class="history-text">
+                                                <h5>Higher Secondary School</h5>
+                                                <span>Kathmandu Institute of Information Technology</span></br>
+                                                <span>Kathmandu, Nepal</span></br>
+                                                <span>2013 - 2015</span>
+                                            </div>
+                                        </div>
+                                        <!-- /.history-item -->
                                    
                                     </div>
                                 </div> <!-- /.history-block -->
