Update name from Anisha to Maya in maya.html

--- a/maya.html
+++ b/maya.html
@@ -169,7 +169,7 @@
 <div id="hearts-container"></div>
 
 <div class="container">
-    <h1>My Dearest Anisha Maya 💖</h1>
+    <h1>My Dearest Maya 💖</h1>
 
     <div id="q1" class="question active">
         <p class="subtitle">First little question…</p>
@@ -214,7 +214,7 @@
             I’m yours — completely. 💕
         </p>
 
-        <p style="font-size:2.8rem; margin:40px 0 20px;">I LOVE YOU ANISHA Mero MAYA ♡</p>
+        <p style="font-size:2.8rem; margin:40px 0 20px;">I LOVE YOU MAYA ♡</p>
     </div>
 </div>
 
